# AffiliateLinker

./: pyproject.toml  serverless.yml
affiliatelinker/: web.py
